# cookiecutter-pypackage

./: .gitignore  README.md  cookiecutter.json  pyproject.toml  setup.py
.github/: mergify.yml  meta.yaml  release-drafter.yml
.github/workflows/: pages.yml  pytest.yaml  python-publish-conda.yml  python-publish-pypi.yml
docs/: conf.py  index.rst  requirements.txt
docs/source/: conf.py  index.rst
python_package/: __init__.py
tests/: conftest.py
{{cookiecutter.project_name}}/: .flake8  Pipfile  README.md  cookiecutter.json  pyproject.toml  pytest.ini
{{cookiecutter.project_name}}/.github/: release-drafter.yml
{{cookiecutter.project_name}}/.github/workflows/: docs.yml  package.yaml  package.yml  pages.yml  release-drafter.yml
{{cookiecutter.project_name}}/docs/: conf.py  index.rst
{{cookiecutter.project_name}}/{{cookiecutter.package_name}}/: version.py
