# pyproject.toml, for more information about configuration options, see 
# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html

[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]

[project]
name = "{{cookiecutter.project_name}}"
authors = [
  { name="{{cookiecutter.full_name}}", email="{{cookiecutter.email}}" },
]
description = "{{cookiecutter.short_description}}"
readme = "README.md"
dynamic = ["version", "dependencies", "optional-dependencies"]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/{{cookiecutter.github_account}}/{{cookiecutter.project_name}}/"
"Documentation" = "https://{{cookiecutter.project_name}}.readthedocs.io/"

[project.scripts]
{{cookiecutter.package_name}} = "{{cookiecutter.package_name}}.__main__:cli"

[tool.setuptools.dynamic.dependencies]
file = ["requirements.txt"]

[tool.setuptools.dynamic.optional-dependencies.dev]
file = ["requirements-dev.txt"]

[tool.setuptools.dynamic.optional-dependencies.docs]
file = ["docs/requirements.txt"]

[tool.setuptools_scm]
root = "."
version_scheme = "post-release"
write_to = "{{cookiecutter.package_name}}/_version.py"
fallback_version = "0.0.1"

[tool.black]
line-length = 120
target-version = ['py37', 'py38', 'py39', 'py310', 'py311']
include = '({{cookiecutter.package_name}}/.*\.py)'

[tool.pytest.ini_options]
testpaths = ["{{cookiecutter.package_name}}", "tests"]
addopts = "-s --cov={{cookiecutter.package_name}} --cov-report=xml --cov-report=html --cov-report=term-missing --doctest-modules"
